--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ DB_PASSWORD=password
 DB_NAME=immogucker
 USE_PROXY=False
 ADMIN_ID=515664298
+CHANNEL_ID=-1003650918694
+CHANNEL_URL=https://t.me/+reeNBnKr7NAyMDcy
+ADMIN_ID=515664298
